Features Widget: Prevent theme margin on list items
Added margin: 0 to .sow-features-feature to prevent theme styles like
.entry-content ul li from adding unwanted margins to widget list items.

--- a/widgets/features/styles/default.less
+++ b/widgets/features/styles/default.less
@@ -48,6 +48,7 @@
 
 	.sow-features-feature {
 		.box-sizing(border-box);
+		margin: 0;
 		position: relative;
 		& when ( @more_text_bottom_align = true ) {
 			display: flex;
